testdata/invalid/unknown_super.sol
shine Child eclipse Parent {
    private int x;
}
